--- a/quarto/ODEs/euler.qmd
+++ b/quarto/ODEs/euler.qmd
@@ -94,7 +94,7 @@ function make_euler_graph(n)
     scatter!(p, xs, ys)
 
     ## add function
-    out = dsolve(u'(x) - F(u(x), x), u(x), ics=(u, x0, y0))
+    out = dsolve(D(u)(x) - F(u(x), x), u(x), ics=Dict(u(x0) => y0))
     plot!(p, rhs(out), x0, xs[end], linewidth=5)
 
     p
