--- a/quarto/ODEs/odes.qmd
+++ b/quarto/ODEs/odes.qmd
@@ -567,7 +567,7 @@ We enter this into `Julia`:
 
 ```{julia}
 @syms w::positive H::positive y()
-eqnc = D2(y)(x) ~ (w/H) * sqrt(1 + y'(x)^2)
+eqnc = D2(y)(x) ~ (w/H) * sqrt(1 + D(y(x))^2)
 ```
 
 Unfortunately, `SymPy` needs a bit of help with this problem, by breaking the problem into steps.
