--- a/quarto/_common_code.qmd
+++ b/quarto/_common_code.qmd
@@ -19,6 +19,11 @@ import Logging
 Logging.disable_logging(Logging.Info) # or e.g. Logging.Info
 Logging.disable_logging(Logging.Warn)
 
+```
+
+```{julia}
+#| eval: false
+#| echo: false
 import SymPy
 function Base.show(io::IO, ::MIME"text/html", x::T) where {T <: SymPy.SymbolicObject}
     println(io, "<span class=\"math-left-align\" style=\"padding-left: 4px; width:0; float:left;\"> ")
@@ -215,5 +220,4 @@ function Base.show(io::IO, m::MIME"text/plain", x::HTMLoutput)
     println(io, caption)
     return nothing
 end
-
 ```
