--- a/quarto/alternatives/makie_plotting.qmd
+++ b/quarto/alternatives/makie_plotting.qmd
@@ -34,7 +34,6 @@ We begin by loading the main package and the `norm` function from the standard `
 ```{julia}
 using GLMakie
 import LinearAlgebra: norm
-
 ```
 
 The `Makie` developers have workarounds for the delayed time to first plot, but without utilizing these the time to load the package is lengthy.
@@ -317,13 +316,13 @@ xs = 1:5
 pts = Point2.(xs, xs)
 scatter(pts)
 annotations!("Point " .* string.(xs), pts;
-             textsize = 50 .- 2*xs,
+             fontsize = 50 .- 2*xs,
              rotation = 2pi ./ xs)
 
 current_figure()
 ```
 
-The graphic shows that `textsize` adjusts the displayed size and `rotation` adjusts the orientation. (The graphic also shows a need to manually override the limits of the `y` axis, as the `Point 5` is chopped off; the `ylims!` function to do so will be shown later.)
+The graphic shows that `fontsize` adjusts the displayed size and `rotation` adjusts the orientation. (The graphic also shows a need to manually override the limits of the `y` axis, as the `Point 5` is chopped off; the `ylims!` function to do so will be shown later.)
 
 
 Attributes for `text`, among many others, include:
@@ -331,7 +330,7 @@ Attributes for `text`, among many others, include:
 
   * `align` Specify the text alignment through `(:pos, :pos)`, where `:pos` can be `:left`, `:center`, or `:right`.
   * `rotation` to indicate how the text is to be rotated
-  * `textsize` the font point size for the text
+  * `fontsize` the font point size for the text
   * `font` to indicate the desired font
 
 
@@ -1151,5 +1150,3 @@ current_figure()
 ```
 
 The slider value is "lifted" by its `value` component, as shown. Otherwise, the above is fairly similar to just using an observable for `h`.
-
-
