--- a/quarto/derivatives/derivatives.qmd
+++ b/quarto/derivatives/derivatives.qmd
@@ -454,7 +454,7 @@ The notation - $\big|$ - on the right-hand side separates the tasks of finding t
 
 
   * Euler used `D` for the operator `D(f)`. This was initially used by [Argobast](http://jeff560.tripod.com/calculus.html). The notation `D(f)(c)` would be needed to evaluate the derivative at a point.
-  * Newton used a "dot" above the variable, $\dot{x}(t)$, which is still widely used in physics to indicate  a derivative in time. This inidicates take the derivative and then plug in $t$.
+  * Newton used a "dot" above the variable, $\dot{x}(t)$, which is still widely used in physics to indicate  a derivative in time. This indicates first taking the derivative and then plugging in $t$.
   * The notation $[expr]'(c)$ or $[expr]'\big|_{x=c}$would similarly mean, take the derivative of the expression and **then** evaluate at $c$.
 
 
@@ -493,8 +493,10 @@ We can rearrange $(k(x+h) - k(x))$ as follows:
 
 
 $$
-(a\cdot f(x+h) + b\cdot g(x+h)) - (a\cdot f(x) + b \cdot g(x)) =
-a\cdot (f(x+h) - f(x)) + b \cdot (g(x+h) - g(x)).
+\begin{align*}
+(a\cdot f(x+h) + b\cdot g(x+h)) - (a\cdot f(x) + b \cdot g(x)) &=\\
+\quada\cdot (f(x+h) - f(x)) + b \cdot (g(x+h) - g(x)).         &
+\end{align*}
 $$
 
 Dividing by $h$, we see that this becomes
@@ -645,8 +647,12 @@ Let's first treat the case of $3$ products:
 
 
 $$
-[u\cdot v\cdot w]' =[ u \cdot (vw)]' = u' (vw) + u [vw]' = u'(vw) + u[v' w + v w'] =
-u' vw + u v' w + uvw'.
+\begin{align*}
+[u\cdot v\cdot w]' &=[ u \cdot (vw)]'\\
+&= u' (vw) + u [vw]'\\
+&= u'(vw) + u[v' w + v w'] \\
+&=u' vw + u v' w + uvw'.
+\end{align*}
 $$
 
 This pattern generalizes, clearly, to:
