--- a/quarto/derivatives/implicit_differentiation.qmd
+++ b/quarto/derivatives/implicit_differentiation.qmd
@@ -268,8 +268,8 @@ Setting $a=1$ we have the graph:
 
 
 ```{julia}
-𝒂 = 1
-G(x,y) = x^3 + y^3 - 3*𝒂*x*y
+a = 1
+G(x,y) = x^3 + y^3 - 3*a*x*y
 implicit_plot(G)
 ```
 
@@ -573,15 +573,15 @@ To illustrate, we need specific values of $a$, $b$, and $L$:
 
 
 ```{julia}
-𝐚, 𝐛, 𝐋 = 3, 3, 10      # L > sqrt{a^2 + b^2}
-F₀(x, y) = F₀(x, y, 𝐚, 𝐛)
+a, b, L = 3, 3, 10      # L > sqrt{a^2 + b^2}
+F₀(x, y) = F₀(x, y, a, b)
 ```
 
 Our values $(x,y)$ must satisfy $f(x,y) = L$. Let's graph:
 
 
 ```{julia}
-implicit_plot((x,y) -> F₀(x,y) - 𝐋, xlims=(-5, 7), ylims=(-5, 7))
+implicit_plot((x,y) -> F₀(x,y) - L, xlims=(-5, 7), ylims=(-5, 7))
 ```
 
 The graph is an ellipse, though slightly tilted.
