--- a/quarto/derivatives/more_zeros.qmd
+++ b/quarto/derivatives/more_zeros.qmd
@@ -355,6 +355,7 @@ There can be problems when the stopping criteria is `abs(b-a) <= 2eps(m))` and t
 
 ```{julia}
 #| hold: true
+#| error: true
 fu(x) = -40*x*exp(-x)
 chandrapatla(fu, -9, 1, λ3)
 ```
