--- a/quarto/derivatives/newtons_method.qmd
+++ b/quarto/derivatives/newtons_method.qmd
@@ -403,8 +403,8 @@ A plot shows us roughly where the value lies:
 #| hold: true
 f(x) = exp(x)
 g(x) = x^6
-plot(f, 0, 25, label="f")
-plot!(g, label="g")
+plot(f, 0, 25; label="f")
+plot!(g; label="g")
 ```
 
 Clearly by $20$ the two paths diverge. We know exponentials eventually grow faster than powers, and this is seen in the graph.
@@ -858,8 +858,10 @@ The calculation that produces the quadratic convergence now becomes:
 
 
 $$
-x_{i+1} - \alpha = (x_i - \alpha) - \frac{1}{k}(x_i-\alpha - \frac{f''(\xi)}{2f'(x_i)}(x_i-\alpha)^2) =
-\frac{k-1}{k} (x_i-\alpha) + \frac{f''(\xi)}{2kf'(x_i)}(x_i-\alpha)^2.
+\begin{align*}
+x_{i+1} - \alpha &= (x_i - \alpha) - \frac{1}{k}(x_i-\alpha - \frac{f''(\xi)}{2f'(x_i)}(x_i-\alpha)^2)
+&= \frac{k-1}{k} (x_i-\alpha) + \frac{f''(\xi)}{2kf'(x_i)}(x_i-\alpha)^2.
+\end{align*}
 $$
 
 As $k > 1$, the $(x_i - \alpha)$ term dominates, and we see the convergence is linear with $\lvert e_{i+1}\rvert \approx (k-1)/k \lvert e_i\rvert$.
