--- a/quarto/derivatives/optimization.qmd
+++ b/quarto/derivatives/optimization.qmd
@@ -1475,8 +1475,10 @@ Numerically find the value of $a$ that minimizes the length of the line seqment 
 ```{julia}
 #| hold: true
 #| echo: false
-x(a) = -a - 1/(2a)
-d(a) = (a-x(a))^2 + (a^2 - x(a)^2)^2
-a = find_zero(d', 1)
-numericq(a)
+let
+    x(a) = -a - 1/(2a)
+    d(a) = (a-x(a))^2 + (a^2 - x(a)^2)^2
+    a = find_zero(d', 1)
+    numericq(a)
+end
 ```
