--- a/quarto/differentiable_vector_calculus/scalar_functions_applications.qmd
+++ b/quarto/differentiable_vector_calculus/scalar_functions_applications.qmd
@@ -1653,7 +1653,7 @@ Here is a snippet of `SymPy` code to verify the above:
 
 ```{julia}
 #| hold: true
-@vars y y′ λ C
+@syms y y′ λ C
 ex = Eq(-λ*y′^2/sqrt(1 + y′^2) + λ*sqrt(1 + y′^2), y - C)
 Δ = sqrt(1 + y′^2) / (y - C)
 ex1 = Eq(simplify(ex.lhs()*Δ), simplify(ex.rhs() * Δ))
