--- a/quarto/differentiable_vector_calculus/vector_valued_functions.qmd
+++ b/quarto/differentiable_vector_calculus/vector_valued_functions.qmd
@@ -1345,6 +1345,7 @@ e₃(t) = sol(t)[7:9]
 We fix a small time range and show the trace of the spine and the frame at a single point in time:
 
 
+
 ```{julia}
 a_0, b_0 = 50, 60
 ts_0 = range(a_0, b_0, length=251)
@@ -1995,10 +1996,10 @@ t0, t1, a = 2PI, PI, PI
 rp = diff.(r(t), t)
 speed = 2sin(t/2)
 
-ex = r(t) - rp/speed * integrate(speed, a, t)
+ex = r(t) - rp/speed * integrate(speed, t)
 
 plot_parametric(0..4pi, r, legend=false)
-plot_parametric!(0..4pi, u -> SymPy.N.(subs.(ex, t .=> u)))
+plot_parametric!(0..4pi, u -> float.(subs.(ex, t .=> u)))
 ```
 
 The expression `ex` is secretly `[t + sin(t), 3 + cos(t)]`, another cycloid.
