--- a/quarto/integral_vector_calculus/div_grad_curl.qmd
+++ b/quarto/integral_vector_calculus/div_grad_curl.qmd
@@ -69,7 +69,7 @@ $$
 It has the interpretation of pointing out the direction of greatest ascent for the surface $z=f(x,y)$.
 
 
-We move now to two other operations, the divergence and the curl, which combine to give a language to describe vector fields in $R^3$.
+We move now to two other operations, the *divergence* and the *curl*, which combine to give a language to describe vector fields in $R^3$.
 
 
 ## The divergence
@@ -680,7 +680,7 @@ V(v) = V(v...)
 p = plot([NaN],[NaN],[NaN], legend=false)
 ys = xs = range(-2,2, length=10 )
 zs = range(0, 4, length=3)
-CalculusWithJulia.vectorfieldplot3d!(p, V, xs, ys, zs, nz=3)
+vectorfieldplot3d!(p, V, xs, ys, zs, nz=3)
 plot!(p, [0,0], [0,0],[-1,5], linewidth=3)
 p
 ```
