--- a/quarto/integrals/ftc.qmd
+++ b/quarto/integrals/ftc.qmd
@@ -202,7 +202,7 @@ $$
 \int_{-\pi/2}^{\pi/2} \cos(x) dx = F(\pi/2) - F(-\pi/2) = 1 - (-1) = 2.
 $$
 
-### An alternate notation for $F(b) - F(a)$
+### An alternate notation
 
 
 The expression $F(b) - F(a)$ is often written in this more compact form:
@@ -617,7 +617,7 @@ We need to figure out when this is $0$. For that, we use some numeric math.
 
 ```{julia}
 F(x) = exp(-x^2) * quadgk(t -> exp(t^2), 0, x)[1]
-Fp(x) = -2x*F(x) + 1
+Fp(x) = -2x * F(x) + 1
 cps = find_zeros(Fp, -4, 4)
 ```
 
