--- a/quarto/integrals/improper_integrals.qmd
+++ b/quarto/integrals/improper_integrals.qmd
@@ -34,8 +34,9 @@ function make_sqrt_x_graph(n)
     a = 1/2^n
     xs = range(1/2^8, stop=b, length=250)
     x1s = range(a, stop=b, length=50)
+    @syms x
     f(x) = 1/sqrt(x)
-    val = N(integrate(f, 1/2^n, b))
+    val = N(integrate(f(x), (x, 1/2^n, b)))
     title = "area under f over [1/$(2^n), $b] is $(rpad(round(val, digits=2), 4))"
 
     plt = plot(f, range(a, stop=b, length=251), xlim=(0,b), ylim=(0, 15), legend=false, size=fig_size, title=title)
