--- a/quarto/integrals/integration_by_parts.qmd
+++ b/quarto/integrals/integration_by_parts.qmd
@@ -440,10 +440,10 @@ Apply the formula to a parameterized circle to ensure, the signed area is proper
 
 ```{julia}
 #| hold: true
-@syms 𝒓 t
-𝒙 = 𝒓 * cos(t)
-𝒚 = 𝒓 * sin(t)
--integrate(𝒚 * diff(𝒙, t), (t, 0, 2PI))
+@syms r t
+x = r * cos(t)
+y = r * sin(t)
+-integrate(y * diff(x, t), (t, 0, 2PI))
 ```
 
 We see the expected answer for the area of a circle.
@@ -461,9 +461,9 @@ Working symbolically, we have one arch given by the following described in a *cl
 ```{julia}
 #| hold: true
 @syms t
-𝒙 = t - sin(t)
-𝒚 = 1 - cos(t)
-integrate(𝒚 * diff(𝒙, t), (t, 0, 2PI))
+x = t - sin(t)
+y = 1 - cos(t)
+integrate(y * diff(x, t), (t, 0, 2PI))
 ```
 
 ([Galileo](https://mathshistory.st-andrews.ac.uk/Curves/Cycloid/) was thwarted in finding this answer exactly and resorted to constructing one from metal to *estimate* the value.)
