--- a/quarto/integrals/partial_fractions.qmd
+++ b/quarto/integrals/partial_fractions.qmd
@@ -261,15 +261,15 @@ We again just let `SymPy` do the work. A partial fraction decomposition is given
 
 
 ```{julia}
-𝒒 =  (x^2 - 2x - 3)
-apart(1/𝒒)
+q =  (x^2 - 2x - 3)
+apart(1/q)
 ```
 
 We see what should yield two logarithmic terms:
 
 
 ```{julia}
-integrate(1/𝒒, x)
+integrate(1/q, x)
 ```
 
 :::{.callout-note}
