--- a/quarto/limits/intermediate_value_theorem.qmd
+++ b/quarto/limits/intermediate_value_theorem.qmd
@@ -300,10 +300,10 @@ The equation $\cos(x) = x$ has just one solution, as can be seen in this plot:
 
 
 ```{julia}
-𝒇(x) = cos(x)
-𝒈(x) = x
-plot(𝒇, -pi, pi)
-plot!(𝒈)
+f(x) = cos(x)
+g(x) = x
+plot(f, -pi, pi)
+plot!(g)
 ```
 
 Find it.
@@ -313,8 +313,8 @@ We see from the graph that it is clearly between $0$ and $2$, so all we need is 
 
 
 ```{julia}
-𝒉(x) = 𝒇(x) - 𝒈(x)
-find_zero(𝒉, (0, 2))
+h(x) = f(x) - g(x)
+find_zero(h, (0, 2))
 ```
 
 ##### Example: Inverse functions
