--- a/quarto/precalc/numbers_types.qmd
+++ b/quarto/precalc/numbers_types.qmd
@@ -112,6 +112,7 @@ This could be worked around, as it is with some programming languages, but it is
 
 
 ```{julia}
+#| error: true
 sqrt(-1.0)
 ```
 
