--- a/quarto/derivatives/curve_sketching.qmd
+++ b/quarto/derivatives/curve_sketching.qmd
@@ -179,8 +179,8 @@ Not much to do here if you are satisfied with a graph that only gives insight in
 
 
 ```{julia}
-𝒇(x) = ( (x-1)*(x-3)^2 ) / (x * (x-2) )
-plot(𝒇, -50, 50)
+f(x) = ( (x-1)*(x-3)^2 ) / (x * (x-2) )
+plot(f, -50, 50)
 ```
 
 We can see the slant asymptote and hints of vertical asymptotes, but, we'd like to see more of the basic features of the graph.
@@ -193,9 +193,9 @@ To identify how wide a viewing window should be, for the rational function the a
 
 
 ```{julia}
-𝒇cps = find_zeros(𝒇', -10, 10)
-poss_ips = find_zero(𝒇'', (-10, 10))
-extrema(union(𝒇cps, poss_ips))
+cps = find_zeros(f', -10, 10)
+poss_ips = find_zero(f'', (-10, 10))
+extrema(union(cps, poss_ips))
 ```
 
 So a range over $[-5,5]$ should display the key features including the slant asymptote.
@@ -205,7 +205,7 @@ Previously we used the `rangeclamp` function defined in `CalculusWithJulia` to a
 
 
 ```{julia}
-plot(rangeclamp(𝒇), -5, 5)
+plot(rangeclamp(f), -5, 5)
 ```
 
 With this graphic, we can now clearly see in the graph the two zeros at $x=1$ and $x=3$, the vertical asymptotes at $x=0$ and $x=2$, and the slant asymptote.
@@ -219,7 +219,7 @@ Again, this sort of analysis can be systematized. The rational function type in 
 
 ```{julia}
 xᵣ = variable(RationalFunction)
-plot(𝒇(xᵣ))  # f(x) of RationalFunction type
+plot(f(xᵣ))  # f(x) of RationalFunction type
 ```
 
 ##### Example
