--- a/quarto/limits/limits_extensions.qmd
+++ b/quarto/limits/limits_extensions.qmd
@@ -153,7 +153,7 @@ Some functions only have one-sided limits as they are not defined in an interval
 
 
 ```{julia}
-limit(x^x, x, 0, dir="+")
+limit(x^x, x=>0, dir="+")
 ```
 
 This agrees with the IEEE convention of assigning `0^0` to be `1`.
